apollo-router/src/orbiter/snapshots/uhg_custom_appollo_roouter__orbiter__test__create_report_invalid_validated_yaml.snap
---
source: apollo-router/src/orbiter/mod.rs
assertion_line: 422
expression: report
---
session_id: "[session_id]"
version: "[version]"
platform:
  os: "[os]"
  continuous_integration: "[ci]"
usage:
  configuration.<redacted>.<redacted>: 1
  configuration.plugins.len: 0
