apollo-router/src/orbiter/snapshots/uhg_custom_appollo_roouter__orbiter__test__visit_args.snap
---
source: apollo-router/src/orbiter/mod.rs
assertion_line: 335
expression: usage
---
args.config_path.<redacted>: 1
args.hot_reload.true: 1
