apollo-router/src/orbiter/snapshots/uhg_custom_appollo_roouter__orbiter__test__visit_config_that_needed_upgrade.snap
---
source: apollo-router/src/orbiter/mod.rs
assertion_line: 374
expression: usage
---
configuration.supergraph.defer_support.len: 1
configuration.supergraph.defer_support.true: 1
